Overflow corrections

--- a/ce-mob/css/main.css
+++ b/ce-mob/css/main.css
@@ -207,6 +207,7 @@ header{padding:5px 0;}
     background:url(../cdn/image/logo.png);
     width:140px;
     height:32px;
+    background-size: 140px 32px;
     text-indent: -99999px;
     margin:0 auto;
 }
@@ -288,7 +289,7 @@ header{padding:5px 0;}
     text-transform: uppercase;
     font-weight: bold;
     color:#fff;
-    font-size: 11px;
+    font-size: 10px;
     line-height:16px;
     text-shadow: 0 1px 1px rgba(0,0,0,0.4);
 }
@@ -697,6 +698,8 @@ a:hover{
     text-decoration: underline;
 }
 
+
+
 @media only screen 
 and (min-device-width : 320px) {
     
@@ -714,6 +717,7 @@ and (min-device-width : 320px) {
     }
 
 }
+/*
 
 @media only screen 
 and (min-device-width : 640px) {
@@ -748,16 +752,16 @@ and (min-device-width : 640px) {
     }
 
 }
-
+*/
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 480px) {
+/*@media only screen and (min-width: 480px) {
 
 /* ====================
     INTERMEDIATE: Menu
-   ==================== */
+   ==================== 
 
     nav a {
         float: left;
@@ -777,7 +781,7 @@ and (min-device-width : 640px) {
 
 /* ========================
     INTERMEDIATE: IE Fixes
-   ======================== */
+   ======================== *
 
     nav ul li {
         display: inline;
@@ -797,7 +801,7 @@ and (min-device-width : 640px) {
 
 /* ============
     WIDE: Menu
-   ============ */
+   ============ 
 
     .title {
         float: left;
@@ -810,7 +814,7 @@ and (min-device-width : 640px) {
 
 /* ============
     WIDE: Main
-   ============ */
+   ============ 
 
     .main article {
         float: left;
@@ -822,6 +826,7 @@ and (min-device-width : 640px) {
         width: 28%;
     }
 }
+*/
 
 @media only screen and (min-width: 1140px) {
 
